Wed Sep 24 23:48:26 1997  Tom Tromey  <tromey@cygnus.com>

	* Release 1.2b.

	* m4/ccstdc.m4 (AM_PROG_CC_STDC): Make sure this is run before
	AC_PROG_CPP.  From Markus Oberhumer.

Fri Sep 12 00:04:19 1997  Paul Eggert  <eggert@twinsun.com>

	* m4/ccstdc.m4 (AM_PROG_CC_STDC): Don't look at __STDC__;
	look only at whether function prototypes are supported.

Wed Sep 24 16:10:37 1997  Tom Tromey  <tromey@cygnus.com>

	* Various: Put "-" before each `rm' line.  This avoids a bug in
	some losing makes (Ultrix, 4.3 BSD).

	* automake.in (handle_dist_worker): Correctly handle subdirs that
	have their own configure.in.  From Peter Mattis.

	* automake.in (handle_yacc_lex_cxx): Handle de-ansi-fied sources
	in srcdir as well as build dir.

	* automake.in (scan_one_configure_file): Detect AC_OUTPUT().
	(handle_single_transform_list): Don't apply length() to a list.

	* automake.in (handle_programs): Define _DEPENDENCIES variable if
	not defined by user.

Thu Sep 18 19:43:38 1997  Tom Tromey  <tromey@cygnus.com>

	* m4/sanity.m4: Quote "$@" for m4.  From Gord Matzigkeit.

Mon Sep  1 23:50:38 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Set need_texi_file only when
	TEXINFO_TEX not defined.

Thu Aug 28 09:37:29 1997  Tom Tromey  <tromey@cygnus.com>

	From Juergen Erhard:
	* automake.in (SUFFIX_RULE_PATTERN): New global.
	(handle_single_transform_list): If suffix matches a source suffix,
	rewrite.
	(read_am_file): Add suffix rules to %suffix_rules.
	(initialize_per_input): Initialize %suffix_rules.

Wed Aug 27 12:56:50 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_texinfo): Also remove .kys and .ps files.

	* automake.in (handle_yacc_lex_cxx): Quoting fixlet.  From Kaveh
	Ghazi.

	* aclocal.in (write_aclocal): Print copyright and copying
	permissions.  From RMS.
	* automake.in (initialize_global_constants): More copyright stuff
	from RMS.

	* automake.in (handle_texinfo): Only require texinfo.tex in