@@ -1831,9 +1831,8 @@ Occasionally a file which would otherwise be called ``source'' (eg a C
 should be listed in the @code{BUILT_SOURCES} variable.
 @vindex BUILT_SOURCES
 
-Built sources are also not compiled by default.  You must either
-explicitly mention them in some other @samp{_SOURCES} variable for this
-to happen.
+Built sources are also not compiled by default.  You must explicitly
+mention them in some other @samp{_SOURCES} variable for this to happen.
 
 Note that, in some cases, @code{BUILT_SOURCES} will work in somewhat
 suprising ways.  In order to get the built sources to work with
