@@ -20,7 +20,10 @@
 ## on GNU make and gcc.  It is only included in the generated
 ## Makefile.in if `automake' is not passed the `--include-deps' flag.
 
-MKDEP = gcc -M $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
+## We have to use $(CC), not `gcc', even though we do rely on gcc to
+## do dependency tracking.  We have to do this because `gcc' is not
+## the real name of the compiler when cross-compiling.
+MKDEP = $(CC) -M $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
 
 ## We must create the .deps directory if it doesn't exist.  We do it
 ## in this strange way a buglet in make -- it won't try to create
