@@ -1,3 +1,7 @@
+Sun Sep 28 15:55:46 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* depend.am (MKDEP): Use $(CC), not gcc.
+
 Wed Sep 24 23:48:26 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* Release 1.2b.
